# moirai

./: .gitignore  README.md  pyproject.toml
.claude/commands/: analyze-evals.md  divergence.md
docs/: onboarding.md
examples/: feature_analysis.py
experiments/: experiment_features.py  experiment_haiku_classification.py  experiment_permutation_fdr.py  experiment_predictive_model.py
moirai/: cli.py  compress.py  filters.py  load.py  normalize.py  schema.py
moirai/analyze/: align.py  dpo.py  (+14 more)
scripts/: analyze_intervention.py  blog_assemble.py  blog_design.py  blog_panel1_hook.py  blog_panel2_fork.py  blog_panel2a_alignment.py  blog_panel2b_flow.py  blog_panel2b_population.py  blog_panel2c_beeswarm.py  blog_panel3_scale.py  blog_panel4_predictors.py  blog_panel5_interventions.py  blog_panel_divergence.py  convert_coderforge.py  convert_eval_harness.py  convert_openhands.py  convert_swe_agent.py  convert_swe_rebench.py  convert_swe_smith.py  convert_swebench_experiments.py  experiment_hmm.py  experiment_hmm_ansible_only.py  experiment_predictive_model.py  experiment_simpsons_paradox.py  experiment_task_family_ablation.py
tests/: test_align.py  test_cli.py  test_cluster.py  test_compare.py  test_compress.py  test_content.py  test_convert_eval_harness.py  test_demo_e2e.py  test_divergence.py  test_evidence.py  test_features.py  test_filters.py  test_gapped_motifs.py  test_html.py  test_load.py  test_motifs.py  test_narrate.py  test_normalize.py  test_ranking.py  test_stats.py  test_stream.py  test_summary.py
viewer/: package-lock.json  package.json  vite.config.ts
(+72 files in other folders)
